<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">互动展示系统</string>
    <string name="main_msg">小区通知</string>
    <string name="main_myl">名医录</string>
    <string name="main_pb">排班</string>
    <string name="main_km">开门</string>
    <string name="main_fx">发现</string>
    <string name="main_gr">我的</string>
    <string name="main_center">接待中心</string>
    <string name="main_show">车型卖点</string>
    <string name="main_sale">互动营销</string>
    <string name="main_person">我的信息</string>
    <string name="activiey_runing">活动还没结束</string>
    <string name="activiey_opening">活动还没关闭</string>
    <string name="main_fq">发起</string>
    <string name="app_btnyes">确定</string>
    <string name="app_btnno">取消</string>
    <string name="app_btnsave">保存</string>
    <string name="edit">编辑</string>
    <string name="wc">完成</string>
    <string name="main_xxtz">下线通知</string>
    <string name="main_ndsj">你的账号在另一台手机登录。如非本人操作，重新登录</string>
    <string name="main_tc">退出</string>
    <string name="main_qxdl">重新登录</string>
    <string name="lcsrmmbt">两次设置的手势密码不同,请重新输入</string>
    <string name="qzcsr">请再次输入手势密码</string>
    <string name="ssmmcw">手势密码错误,请重新输入</string>
    <string name="qszssmm">请设置手势密码</string>
    <string name="qsryssmm">请输入原手势密码</string>
    <string name="main_person_wjssmm">忘记手势密码</string>
    <string name="main_person_xgssmm">修改手势密码</string>
    <string name="main_person_qsrssmm">请输入手势密码</string>
    <string name="xssmm">修改手势密码</string>
    <string name="esc">再按一次退出程序</string>
    <string name="title_activity_launch">初始界面</string>
    <string name="title_activity_guide">引导界面</string>
    <string name="title_activity_faultsug">故障反馈</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_hyyzm">获取验证码</string>
    <string name="welcome_zcxyh">注册</string>
    <string name="welcome_sjhm">请输入手机号码</string>
    <string name="welcome_srmm">请输入密码</string>
    <string name="welcome_sjyzm">手机验证码</string>
    <string name="welcome_dl">登录</string>
    <string name="app_loading">正在加载...</string>
    <string name="qsrzh">请输入帐号</string>
    <string name="qsrmm">请输入密码</string>
    <string name="qsrqrmm">请输入确认密码</string>
    <string name="mmgscw">密码过于简单，需要设置一个更安全的密码哦！</string>
    <string name="mmcdcw">密码长度错误：6-15位</string>
    <string name="cqmmsrbyz">两次密码输入不一致</string>
    <string name="sjhgscw">手机号码格式错误</string>
    <string name="qsryzm">请输入验证码</string>
    <string name="yzmhqcg">验证码已成功发送，请在短信中查看！</string>
    <string name="wsd">未收到？</string>
    <string name="m">秒</string>
    <string name="lostnet">世界上最遥远的距离就是没有网，请检查网络设置！</string>
    <string name="noble">很抱歉！得令需要与手机蓝牙连接，您的蓝牙版本过低，暂时无法使用！</string>
    <string name="logout">退出登录</string>
    <string name="dataparsefail">服务器数据异常！</string>
    <string name="activity_faultsug_submit">提交</string>
    <string name="title_activity_fault">问题反馈</string>
    <string name="tqzb_xztp">选择图片</string>
    <string name="app_ButtonTextYes">确定</string>
    <string name="act_problem_title_name">常见问题</string>
    <string name="wdewm">我的二维码名片</string>
    <string name="ewm">二维码</string>
    <string name="sqjl">申请记录</string>
    <string name="zjjs">添加授权</string>
    <string name="zdsm">将门栋二维码放入框内,即可自动扫描</string>
    <string name="write_info_self">手动填写信息</string>
    <string name="activity_askkey">申请手机钥匙</string>
    <string name="activity_askkey_name">真实姓名</string>
    <string name="activity_askkey_homeName">户主姓名</string>
    <string name="activity_askkey_phone">手机号码</string>
    <string name="activity_askkey_status">身份</string>
    <string name="activity_askkey_status_sort">身份</string>
    <string name="activity_askkey_state">状态</string>
    <string name="activity_askkey_city">城市</string>
    <string name="activity_askkey_areas">小区</string>
    <string name="activity_askkey_door">门栋</string>
    <string name="activity_askkey_room">房号</string>
    <string name="activity_askkey_submit">提交申请</string>
    <string name="activity_askkey_roominfo">房屋信息</string>
    <string name="activity_askkey_personinfo">个人信息</string>
    <string name="nocard">没有储存卡</string>
    <string name="app_picloading">正在上传中,请稍等...</string>
    <string name="xgcg">修改成功</string>
    <!-- 时间选择器相关 -->
    <string name="pickerview_allyear">全年</string>
    <string name="pickerview_nowMonth">单月</string>
    <string name="pickerview_name">时间选择器</string>
    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hao">号</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_seconds">秒</string>
    <string name="gxbb">更新版本</string>
    <string name="ljgx">立即更新</string>
    <string name="zwgx">暂未更新</string>
    <string name="downloaderror">下载地址出现错误，请重新操作!</string>
    <string name="downloading">正在下载最新版安装包,该包存放路径为</string>
    <string name="thankyou">，如在安装过程中出现问题请手动到该包存放路径中进行安装，谢谢。</string>
    <string name="qxgx">取消更新</string>
    <string name="zbgx">暂不更新</string>
    <string name="qsrjsxm">请输入家属姓名</string>
    <string name="qsrjssjh">请输入家属手机号码</string>
    <string name="qxzjssf">请选择家属身份</string>
    <string name="mjyxsj">门禁有效时间</string>
    <string name="sqsjys">授权手机钥匙</string>
    <string name="sqsqtjcg">恭喜您！您提交的家属请求待物业管理员审核通过后，下载并注册得令APP就可摇一摇开门咯！</string>
    <string name="title_activity_my_key_two">我的钥匙</string>
    <string name="copyright">广州得令信息科技有限公司</string>
    <string name="about">\t\t得令手机开门是一款为小区业主带来更便捷的智能开门的APP应用，只要通过手机摇一摇即可实现开门。告别翻包找钥匙的烦恼，让开门更炫酷！</string>
    <string name="version">V1.6.0</string>
    <string name="title_activity_key_log_details_pass">申请记录详情</string>
	<string name="activity_askkey_details">原因：</string>
	<string name="activity_askkey_up_again">再次提交申请</string>
	<string name="activity_askkey_pass">已通过</string>
	<string name="activity_askkey_nopass">未通过</string>
	<string name="activity_askkey_load">待审核</string>
	<string name="activity_askkey_status_tenant">租客</string>
	<string name="activity_askkey_status_family">家属</string>
	<string name="activity_askkey_status_owner">户主</string>
	<string name="activity_askkey_notice">请您准确选择所在小区、楼栋、房号信息，否则将影响您所申请的手机钥匙审核！</string>
	<string name="btn_gotochoolse">前往选择</string>
	<string name="btn_cancel">稍后再说</string>
	<string name="selectall">全选</string>
	<string name="uselectall">全不选</string>
	
</resources>
