<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_white"
    android:orientation="vertical" >

    <deling.cellcom.com.cn.widget.Header
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_head_height"
        android:background="@drawable/main_nav_bg" />

    <TextView
        android:drawableLeft="@drawable/icon_activity_askkey_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="18dp"
        android:paddingTop="10dp"
        android:text="@string/activity_askkey_roominfo"
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/ll_city"
        style="@style/activity_askkry_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="1dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/activity_askkey_city" />

        <TextView
            android:id="@+id/tv_city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_horizontal"
            android:lines="1"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        style="@style/activity_askkry_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="1dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/activity_askkey_areas" />

        <TextView
            android:id="@+id/tv_areas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_horizontal"
            android:lines="1"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        style="@style/activity_askkry_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="1dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/activity_askkey_door" />

        <TextView
            android:id="@+id/tv_door"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_horizontal"
            android:lines="1"
            android:textColor="@color/black" />
    </LinearLayout>

    <TextView
        android:drawableLeft="@drawable/icon_activity_askkey_person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="18dp"
        android:paddingTop="10dp"
        android:text="@string/activity_askkey_personinfo"
        android:textSize="14sp" />

    <LinearLayout
        style="@style/activity_askkry_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="1dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/activity_askkey_name" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center_horizontal"
            android:lines="1"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        style="@style/activity_askkry_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="1dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/activity_askkey_phone" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center_horizontal"
            android:lines="1"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        style="@style/activity_askkry_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="1dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/activity_askkey_status" />

        <TextView
            android:id="@+id/et_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_horizontal"
            android:lines="1"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/app_list_right_arrow"
            android:contentDescription="@null" />
    </LinearLayout>

    <LinearLayout
        style="@style/activity_askkry_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="1dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/activity_askkey_room" />

        <TextView
            android:id="@+id/et_room"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_horizontal"
            android:lines="1"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/app_list_right_arrow"
            android:contentDescription="@null" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:layout_centerInParent="true"
            android:id="@+id/tv_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/faultsug_draw_round"
            android:gravity="center_horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/activity_askkey_submit"
            android:textColor="@color/white" />
    </RelativeLayout>

</LinearLayout>