<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_white"
    android:orientation="vertical"
    tools:context="deling.cellcom.com.cn.activity.me.KeyLogDetailsPassActivity" >

    <deling.cellcom.com.cn.widget.Header
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_head_height"
        android:orientation="vertical" />

    <LinearLayout
        style="@style/activity_askkry_style"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="1dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/activity_askkey_homeName" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center_horizontal"
            android:lines="1"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        style="@style/activity_askkry_style"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="1dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/activity_askkey_phone" />

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center_horizontal"
            android:lines="1"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        style="@style/activity_askkry_style"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="1dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/activity_askkey_areas" />

        <TextView
            android:id="@+id/tv_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center_horizontal"
            android:lines="1"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        style="@style/activity_askkry_style"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="1dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/activity_askkey_door" />

        <TextView
            android:id="@+id/tv_door"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center_horizontal"
            android:lines="1"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        style="@style/activity_askkry_style"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="1dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/activity_askkey_room" />

        <TextView
            android:id="@+id/tv_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center_horizontal"
            android:lines="1"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        style="@style/activity_askkry_style"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="1dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/activity_askkey_status_sort" />

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center_horizontal"
            android:lines="1"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        style="@style/activity_askkry_style"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="1dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/activity_askkey_state" />

        <TextView
            android:id="@+id/tv_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center_horizontal"
            android:lines="1"
            android:textColor="@color/red"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        style="@style/activity_askkry_style"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/activity_askkey_details" />

        <TextView
            android:id="@+id/tv_reason"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/tv_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/activity_askkey_up_again" />
    </RelativeLayout>

</LinearLayout>