<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainll"
    style="@style/app_bg"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_centerVertical="true"
    android:orientation="vertical"
	android:background="@color/gray_white">

    <deling.cellcom.com.cn.widget.Header
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_head_height"
        android:orientation="vertical" />
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="50dp" 
        android:layout_marginRight="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:orientation="vertical" >
        
	    <ImageView
	        android:id="@+id/logo"
	        android:layout_width="fill_parent"
	        android:layout_height="100dp"
	        android:scaleType="centerInside"
	        android:src="@drawable/logo" />
	    
	     <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:drawableLeft="@null"
	        android:drawablePadding="10dp"
	        android:layout_margin="15dp"
	        android:textSize="17sp"
	        android:layout_gravity="center_horizontal"
	        android:text="@string/version" />
	</LinearLayout>
	
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@null"
        android:drawablePadding="10dp"
        android:layout_margin="15dp"
        android:textSize="17sp"
        android:layout_gravity="center_horizontal"
        android:text="@string/about" />
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

    </LinearLayout>
    
   	<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"
        android:text="@string/copyright" />

</LinearLayout>